tests/ui/parser/macro-rules-paren-name-issue-150899.stderr
error: macros that expand to items must be delimited with braces or followed by a semicolon
  --> $DIR/macro-rules-paren-name-issue-150899.rs:1:13
   |
LL | macro_rules!(i_think_the_name_should_go_here) {
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
help: to define a macro, remove the parentheses around the macro name
   |
LL - macro_rules!(i_think_the_name_should_go_here) {
LL + macro_rules! i_think_the_name_should_go_here {
   |

error: expected item, found `{`
  --> $DIR/macro-rules-paren-name-issue-150899.rs:1:47
   |
LL | macro_rules!(i_think_the_name_should_go_here) {
   |                                               ^ expected item
   |
   = note: for a full list of items that can appear in modules, see <https://doc.rust-lang.org/reference/items.html>

error: aborting due to 2 previous errors

